mudei comida por coco

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <ul>
 <li>Roupa</li>
 <li>tenis</li>
-<li>comidas</li>
+<li>coco</li>
 <li>casas</li>
     </ul>
 <h2>lista igual so q com outro codigo</h2>
